# donnees.montreal.ca

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  pyproject.toml  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: publish.yml
CHANGELOG/: 0.0.1.md
docs/: api.md  index.md  installation.md  usage.md
src/dm/: __init__.py  cli.py  config.py  main.py  mod_classes.py  utils.py
tests/: test_dm.py
