[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "donnees.montreal.ca"
version = "0.0.1"
description = "Le site des données ouvertes de la Ville de Montréal"
readme = "README.md"
authors = [
  {name = "Alexander Campos", email = "6396262@bdeb.qc.ca"}
]
maintainers = [
  {name = "Alexander Campos", email = "6396262@bdeb.qc.ca"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
license = {text = "MIT"}
dependencies = [
  "typer",
  "rich",
]
requires-python = ">= 3.12"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typecheck" },
]
lint = [
    "ruff",
]
test = [
    "coverage",
    "pytest",
]
typecheck = [
    "ty",
]
docs = [
    "zensical",
    "mkdocstrings-python",
]

[project.urls]
bugs = "https://github.com/6396262-bdeb-qc-ca/donnees.montreal.ca/issues"
changelog = "https://github.com/6396262-bdeb-qc-ca/donnees.montreal.ca/releases"
documentation = "https://6396262-bdeb-qc-ca.github.io/donnees.montreal.ca/"
homepage = "https://github.com/6396262-bdeb-qc-ca/donnees.montreal.ca"

[project.scripts]
dm = "dm.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.coverage.run]
branch = true
parallel = true
source = ["src/", "tests/"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
exclude_also = [
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@overload",
    "@typing.overload",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true
default-groups = ["dev"]
